--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
+    "echarts": "^5.3.2",
     "node-sass": "^4.14.1",
+    "postcss-pxtorem": "^5.1.1",
     "sass-loader": "^7.3.1",
     "vant": "^2.12.47",
     "vue": "^2.6.11",
@@ -25,10 +27,10 @@
     "babel-plugin-import": "^1.13.5",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "less-loader": "^7.3.0",
     "postcss-px2rem": "^0.3.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "vue-cli-plugin-cube-ui": "~0.2.5",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
